2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* Resources/main.gorm: Rearrange main menu, add standard edit menu
	items, and add Services menu.

	* DiffTextView.m (-initWithFrame:): Make view selectable.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.h:
	* AppController.m:
	* DiffFileChooser.h:
	* DiffFileChooser.m:
	* FileIconView.h:
	* FileIconView.m:
	* Resources/main.gorm:
	* EasyDiff.pcproj/PC.project:
	* GNUmakefile:
	Present a dialog upon selecting the Compare Files menu command
	where the user can choose the files to compare.

	* AUTHORS:
	* EasyDiff.pcproc/PC.project:
	* EasyDiffInfo.plist:
	Update list of authors.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* EasyDiff.pcproj:
	* PC.project:
	* GNUmakefile:
	* GNUmakefile.preamble:
	* EasyDiffInfo.plist:
	Upgrade project and support files to latest PC version.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* DiffMiddleView.m (-setLeftChanged:andRightChanges:):
	Use -setTitle: to set NSButtonCell titles.

2011-03-09  Wolfgang Lux  <wolfgang.lux@gmail.com>

	* AppController.m (-compareFilesToCVS:):
	* DiffMiddleView.m (-dealloc):
	* DiffTextView.m (-setLineRanges:):
	* DiffView.m (-dealloc):
	* DiffWindowController.m (-dealloc, -_patchMutableString:):
	* DiffWrapper.m (tasktest):
	Remove a number of space leaks and properly stop observing
	notifications when objects are deallocated.

2008-03-09 Adam Fedor  <fedor@gnu.org>

	* Version 0.4.0

2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>

	* AppController.m: do not call openPanel twice

2008-02-15  Riccardo Mottola  <rmottola@users.sf.net>

	* GNUmakefile,
	AppController.m, AppController.h,
	EasyDiffInfo.plist,
	gorm files:
	Warning fixes, implement preferences for CVS executable path and
	removed wizardry relying on internal Bundle methods

2006-11-15  Nicola Pero  <nicola.pero@meta-innovation.com>

	* GNUmakefile: Removed GNUSTEP_INSTALLATION_DIR.

2005-06-13  Adam Fedor  <fedor@gnu.org>
