@@ -9,7 +9,7 @@
 	"Riccardo Mottola",
 	"Wolfgang Lux"
     );
-    Copyright = "2002-2011";
+    Copyright = "2002-2012";
     CopyrightDescription = "Released under GPL 2.0";
     FullVersionID = "0.4.0";
     NOTE = "Automatically generated!";
